# rev_buf_reader

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: style.yml  tests.yml
base/: README.md
src/: io_helpers.rs  lib.rs  tests.rs
