[package]
name = "rev_buf_reader"
version = "0.1.0"
authors = ["André Vicente Milack <andrevicente.m@gmail.com>"]
edition = "2018"
description = "Crate that provides a buffered reader capable of reading chunks of bytes of a data stream in reverse order. Its implementation is an adapted copy of BufReader from the nightly std::io."
repository = "https://github.com/Milack27/rev_buf_reader"
exclude = ["base/*"]
readme = "README.md"
license = "MIT"
license-file = "LICENSE"

[features]
default=[]
iovec=[]
read_initializer=[]

[dependencies]
memchr="2.2.0"
