[package]
name = "rev_buf_reader"
version = "0.2.0"
authors = ["André Vicente Milack <andrevicente.m@gmail.com>"]
edition = "2021"
description = "Crate that provides a buffered reader capable of reading chunks of bytes of a data stream in reverse order. Its implementation is an adapted copy of BufReader from the nightly std::io."
repository = "https://github.com/andre-vm/rev_buf_reader"
exclude = ["base/*"]
readme = "README.md"
license = "Apache-2.0 OR MIT"

[features]
default = []
read_initializer = []

[dependencies]
memchr = "2.3.0"
